# kenabo

./: README.md  TASKS.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs.rs  lib.rs  path_safety.rs  search.rs  smb.rs  terminal.rs
src-tauri/src/application/: collections.rs  environments.rs  execute_request.rs  mod.rs
src-tauri/src/domain/: error.rs  mod.rs
src-tauri/src/domain/collection/: mod.rs
src-tauri/src/domain/environment/: mod.rs
src-tauri/src/domain/http/: auth.rs  body.rs  header.rs  method.rs  mod.rs  request.rs  response.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/http_client/: mod.rs  reqwest_client.rs
src-tauri/src/infrastructure/persistence/: fs_collection_repo.rs  fs_environment_repo.rs  mod.rs  paths.rs
src-tauri/src/infrastructure/tauri/: commands.rs  state.rs
src-tauri/src/ports/: collection_repo.rs  environment_repo.rs  http_client.rs  mod.rs
src/app/: App.tsx  providers.tsx
src/components/: app-sidebar.tsx  file-explorer.tsx  search-palette.tsx
src/components/file-explorer/: context-menu.tsx  file-icon.tsx  file-row.tsx  index.tsx  toolbar.tsx  types.ts  utils.ts
src/components/ui/: input-dialog.tsx  separator.tsx  sheet.tsx  sidebar.tsx
src/features/collections/application/: collection-service.ts
src/features/collections/domain/: collection.ts  folder-ops.ts
src/features/collections/infrastructure/: tauri-collection-gateway.ts
src/features/collections/presentation/: CollectionsSidebar.tsx  store.ts
src/features/environments/domain/: environment.ts
src/features/hotkeys/: bindings.tsx  registry.ts
src/lib/: fs.ts
src/shared/domain/: id.ts
src/shared/infrastructure/: tauri-client.ts
(+56 files in other folders)
